--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.2.1+1 
+
+  #animation
+  flutter_spinkit: ^5.2.0
+
+  #cache
+  shared_preferences: ^2.2.0
+  flutter_secure_storage: ^8.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +48,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
