--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,17 @@ dependencies:
 
   #animation
   flutter_spinkit: ^5.2.0
+  lottie: ^2.5.0
 
   #cache
   shared_preferences: ^2.2.0
   flutter_secure_storage: ^8.0.0
+
+  url_launcher: ^6.1.12
+  provider: ^6.0.5
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
+  equatable: ^2.0.5
 
 
 
@@ -57,6 +64,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
